fixed text for wrapped quintil bar charts; minor fix for houdhold table visualization

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -160,30 +160,6 @@ ul.custom-list li {
   text-align: left;
 }
 
-/* p.implications {
-  margin-bottom: 8px;
-}
-  
-ul.custom-list {
-  margin-top: 8px;
-}
-  
-ul.custom-list li::marker {
-  font-size: 1.2em;
-}
-
-ul.expenditure li::marker {
-  color: #f0ae9f;
-}
-
-ul.social-infrastructure li::marker {
-  color: #a5cdc8;
-}
-
-ul.time-usage li::marker {
-  color: #fcd799;
-} */
-
 .infobox-list li {
   font-variation-settings: "slnt" 0, "wdth" 100, "wght" 400;
 }
